--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: abhinavs/moonwalk
+theme: cayman
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
