--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 baseurl: /
 site_url: https://mksipe.github.io/mksipe/
+google_analytics: G-9EYM2VBQK1
